--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Phòng trọ 123.com by Dung Bap</title>
+        <title>Phongtro123.com by Dung Bap</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
